test/integration/bad/tuples/incomplete7.stan
functions {
   tuple(real, int, ) foo()
}
